--- a/Nextcloud/Rclone.service
+++ b/Nextcloud/Rclone.service
@@ -9,18 +9,17 @@ Type=simple
 ExecStart=/usr/bin/rclone mount \
         --config=/home/edson/.config/rclone/ \
         --allow-other \
-        --cache-tmp-upload-path=/tmp/rclone/upload \
-        --cache-chunk-path=/tmp/rclone/chunks \
-        --cache-workers=8 \
-        --cache-writes \
         --cache-dir=/tmp/rclone/vfs \
-        --cache-db-path=/tmp/rclone/db \
         --no-modtime \
         --drive-use-trash \
         --stats=0 \
-        --checkers=16 \
-        --bwlimit=40M \
-        --dir-cache-time=60m \
+        --bwlimit=30M \
+        --dir-cache-time=120m \
+        --vfs-cache-mode full \
+        --vfs-cache-max-size 20G \
+	--user-agent "ISV|rclone.org|rclone/v1.62.2" \
+        --onedrive-no-versions \
+        --tpslimit 4 \
         --cache-info-age=60m Onedrive/ /mnt/rclone/Onedrive
 ExecStop=/bin/fusermount -u /mnt/rclone/Onedrive
 Restart=always
