--- a/Nextcloud/server/example.conf
+++ b/Nextcloud/server/example.conf
@@ -8,20 +8,6 @@ DEVICE="/dev/sxx"
 # Ponto de Montagem do HD externo 
 MOUNTDIR="/path/to/mont/HD-Externo"
 
-# OPCIONALMENTE ALTERE ESTA SEÇÃO CASO UTILIZE O RCLONE.CONF CRIPTOGRAFADO COM GPG
-
-# Diretório onde é armazenada chaves e senhas.
-DIRGPG='/path/to/.gnupg'
-
-# Arquivo de Senha para Criptografar e descriptografar arquivos com GPG.		
-PASSFILE='/path/to/senha'
-
-# Arquivo criptografado rclone.conf.gpg
-RCLONECONFIG_CRIPT='/path/to/rclone.conf.gpg'
-
-# Arquivo descriptografado 	
-RCLONECONFIG='/path/to/rclone.conf'
-
 # VARIÁVEIS
 
 # Configurações Nextcloud 
@@ -47,6 +33,6 @@ ARCHIVE_DATE=$1
 # Incluir pastas e arquivos especificos ao backup 
 PATTERNS='/path/to/patterns.lst'
 
-# Arquivos de Log		
-LOGFILE_PATH='/path/to/backup-$(date +%Y-%m-%d_%H-%M).txt'
-RESTLOGFILE_PATH='/path/to/restore-$(date +%Y-%m-%d_%H-%M).txt'
+# Arquivos de Log 
+LOGFILE_PATH='/var/log/backup-$(date +%Y-%m-%d_%H-%M).txt'
+RESTLOGFILE_PATH='/var/log/restore-$(date +%Y-%m-%d_%H-%M).txt'
