--- a/Nextcloud/snap/example.conf
+++ b/Nextcloud/snap/example.conf
@@ -1,25 +1,21 @@
 #!/bin/bash
 
+# UTILIZE A GUIA ABAIXO SOMENTE EM CASO DE PRECISAR RESTAURAR ARQUIVOS OU PASTAS EM ARMAZENAMENTO EXTERNO 
+#
 # Caminho do Hd Externo (checar "fdisk -l")
 DEVICE="/dev/sxx"
 
 # Ponto de Montagem do HD externo 
 MOUNTDIR="/path/to/mont/HD-Externo"
 
-# Diretório onde é armazenada chaves e senhas.
-DIRGPG='/path/to/.gnupg'
+# VARIÁVEIS
 
-# Arquivo de Senha para Criptografar e descriptografar arquivos com GPG.		
-PASSFILE='/path/to/senha'
-	
-# Arquivo criptografado rclone.conf.gpg
-RCLONECONFIG_CRIPT='/path/to/rclone.conf.gpg'
+# Configurações Nextcloud 
 
-# Arquivo descriptografado 	
-RCLONECONFIG='/path/to/rclone.conf'
-
-# Incluir pastas e arquivos especificos ao backup 
-PATTERNS='/path/to/patterns.lst'
+NEXTCLOUD_CONF="/var/snap/nextcloud/common/backups"
+NEXTCLOUD_DATA="/path/to/nextcloud/data"
+BACKUP_FILE="$NEXTCLOUD_CONF/$(date +%Y%m%d-%H%M)_nextcloud-backup.tar.gz"
+RESTORE_FILE=$(ls -t $NEXTCLOUD_CONF/*.tar.gz | head -n1)
 
 # Configurando isso, para que o repositório não precise ser fornecido na linha de comando:
 export BORG_REPO="/path/to/folder/Repo"
@@ -27,12 +23,12 @@ export BORG_REPO="/path/to/folder/Repo"
 # Configurando isso, para que a senha não seja fornecido na linha de comando 
 export BORG_PASSPHRASE='Senhasegura'
 
-# Data do backup a ser restaurado (borg list)
-DATARESTORE=2022-05-31-22:00
+# Data do Backup
+ARCHIVE_DATE=$1
 
-# Pasta onde são armazenadas as exportações do nextcloud
-NEXTCLOUD_CONFIG=/var/snap/nextcloud/common/backups 
+# Incluir pastas e arquivos especificos ao backup 
+PATTERNS='/path/to/patterns.lst'
 
-# Arquivos de Log		
-LOGFILE_PATH='/path/to/backup-$(date +%Y-%m-%d_%H-%M).txt'
-RESTLOGFILE_PATH='/path/to/restore-$(date +%Y-%m-%d_%H-%M).txt'
+# Arquivos de Log 
+LOGFILE_PATH='/var/log/backup-$(date +%Y-%m-%d_%H-%M).txt'
+RESTLOGFILE_PATH='/var/log/restore-$(date +%Y-%m-%d_%H-%M).txt'
