--- a/Nextcloud/snap/example.conf
+++ b/Nextcloud/snap/example.conf
@@ -13,9 +13,12 @@ MOUNTDIR="/path/to/mont/HD-Externo"
 # Configurações Nextcloud 
 
 NEXTCLOUD_CONF="/var/snap/nextcloud/common/backups"
-NEXTCLOUD_DATA="/path/to/nextcloud/data"
 BACKUP_FILE="$NEXTCLOUD_CONF/$(date +%Y%m%d-%H%M)_nextcloud-backup.tar.gz"
 RESTORE_FILE=$(ls -t $NEXTCLOUD_CONF/*.tar.gz | head -n1)
+
+# Caso a pasta ./data esteja em outro local favor altere o caminho abaixo.
+
+NEXTCLOUD_DATA="/var/snap/nextcloud/common/nextcloud/data"
 
 # Configurando isso, para que o repositório não precise ser fornecido na linha de comando:
 export BORG_REPO="/path/to/folder/Repo"
