--- a/Nextcloud + Emby (Jellyfin)/snap/example.conf
+++ b/Nextcloud + Emby (Jellyfin)/snap/example.conf
@@ -20,6 +20,10 @@ RESTORE_FILE=$(ls -t $NEXTCLOUD_CONF/*.tar.gz | head -n1)
 
 NEXTCLOUD_DATA="/var/snap/nextcloud/common/nextcloud/data"
 
+# Pasa de Configurações Emby (Jellyfin
+
+$EMBY_CONF="/var/lib/emby"
+
 # Configurando isso, para que o repositório não precise ser fornecido na linha de comando:
 export BORG_REPO="/path/to/folder/Repo"
 
