Update Nextcloud + Emby

--- a/Nextcloud + Emby (Jellyfin)/snap/example.conf
+++ b/Nextcloud + Emby (Jellyfin)/snap/example.conf
@@ -22,7 +22,7 @@ NEXTCLOUD_DATA="/var/snap/nextcloud/common/nextcloud/data"
 
 # Pasa de Configurações Emby (Jellyfin
 
-$EMBY_CONF="/var/lib/emby"
+EMBY_CONF="/var/lib/emby"
 
 # Configurando isso, para que o repositório não precise ser fornecido na linha de comando:
 export BORG_REPO="/path/to/folder/Repo"
