Update Nextcloud + Emby

--- a/Nextcloud + Emby (Jellyfin)/snap/example.conf
+++ b/Nextcloud + Emby (Jellyfin)/snap/example.conf
@@ -20,7 +20,7 @@ RESTORE_FILE=$(ls -t $NEXTCLOUD_CONF/*.tar.gz | head -n1)
 
 NEXTCLOUD_DATA="/var/snap/nextcloud/common/nextcloud/data"
 
-# Pasa de Configurações Emby (Jellyfin
+# Pasta de Configurações Emby (Jellyfin)
 
 EMBY_CONF="/var/lib/emby"
 
