Update Nextcloud + Emby

--- a/Nextcloud + Emby (Jellyfin)/server/example.conf
+++ b/Nextcloud + Emby (Jellyfin)/server/example.conf
@@ -15,6 +15,10 @@ MOUNTDIR="/path/to/mont/HD-Externo"
 NEXTCLOUD_CONF="/var/www/nextcloud"
 NEXTCLOUD_DATA="/path/to/nextcloud/data"
 
+# Pasta de Configurações Emby (Jellyfin)
+
+EMBY_CONF="/var/lib/emby"
+
 # Banco de dados
 HOSTNAME=localhost
 DATABASE_NAME=nextcloud
