Upadate Nextcloud + PLEX

--- a/Nextcloud + Plex/server/example.conf
+++ b/Nextcloud + Plex/server/example.conf
@@ -17,7 +17,7 @@ NEXTCLOUD_DATA="/path/to/nextcloud/data"
 
 # Pasta de Configurações Emby (Jellyfin)
 
-PLEX_CONF="/var/lib/emby"
+PLEX_CONF="/var/lib/plexmediaserver/Library/Application Support/Plex Media Server"
 
 # Banco de dados
 HOSTNAME=localhost
