--- a/example.conf
+++ b/example.conf
@@ -1,25 +1,12 @@
 #!/bin/bash
 
+# UTILIZE A GUIA ABAIXO SOMENTE EM CASO DE PRECISAR RESTAURAR ARQUIVOS OU PASTAS EM ARMAZENAMENTO EXTERNO 
+#
 # Caminho do Hd Externo (checar "fdisk -l")
 DEVICE="/dev/sxx"
 
 # Ponto de Montagem do HD externo 
 MOUNTDIR="/path/to/mont/HD-Externo"
-
-# Diretório onde é armazenada chaves e senhas.
-DIRGPG='/path/to/.gnupg'
-
-# Arquivo de Senha para Criptografar e descriptografar arquivos com GPG.		
-PASSFILE='/path/to/senha.txt'
-	
-# Arquivo criptografado rclone.conf.gpg
-RCLONECONFIG_CRIPT='/path/to/rclone.conf.gpg'
-
-# Arquivo descriptografado 	
-RCLONECONFIG='/path/to/rclone.conf'
-
-# Incluir pastas e arquivos especificos ao backup 
-PATTERNS='/path/to/patterns.lst'
 
 # Configurando isso, para que o repositório não precise ser fornecido na linha de comando:
 export BORG_REPO="/path/to/folder/Repo"
@@ -27,9 +14,15 @@ export BORG_REPO="/path/to/folder/Repo"
 # Configurando isso, para que a senha não seja fornecido na linha de comando 
 export BORG_PASSPHRASE='Senhasegura'
 
-# Data do backup a ser restaurado (borg list)
-DATARESTORE=20220416-2140
+# Data do Backup
+ARCHIVE_DATE=$1
 
-# Arquivo de Log		
-LOGFILE_PATH='/path/to/backup-$(date +%Y-%m-%d_%H-%M).txt'
-RESTLOGFILE_PATH='/path/to/restore-$(date +%Y-%m-%d_%H-%M).txt'
+# Arquivo a ser Restaurado 
+FILE_TO_RESTORE=$2
+
+# Incluir pastas e arquivos especificos ao backup 
+PATTERNS='/path/to/patterns.lst'
+
+# Arquivos de Log 
+LOGFILE_PATH='/var/log/backup-$(date +%Y-%m-%d_%H-%M).txt'
+RESTLOGFILE_PATH='/var/log/restore-$(date +%Y-%m-%d_%H-%M).txt'
