--- a/Nextcloud + Plex/snap/example.conf
+++ b/Nextcloud + Plex/snap/example.conf
@@ -1,41 +1,41 @@
 #!/bin/bash
 
-# UTILIZE A GUIA ABAIXO SOMENTE EM CASO DE PRECISAR RESTAURAR ARQUIVOS OU PASTAS EM ARMAZENAMENTO EXTERNO 
+# USE THE TAB BELOW ONLY IN CASE OF NEEDING TO RESTORE FILES OR FOLDERS IN EXTERNAL STORAGE 
 #
-# Caminho do Hd Externo (checar "fdisk -l")
+# External HD Path (check "fdisk -l")
 DEVICE="/dev/sxx"
 
-# Ponto de Montagem do HD externo 
+# Mount Point of the external HD 
 MOUNTDIR="/path/to/mont/HD-Externo"
 
-# VARIÁVEIS
+# VARIABLES
 
-# Configurações Nextcloud 
+# Nextcloud Settings 
 
 NEXTCLOUD_CONF="/var/snap/nextcloud/common/backups"
 BACKUP_FILE="$NEXTCLOUD_CONF/$(date +%Y%m%d-%H%M)_nextcloud-backup.tar.gz"
 RESTORE_FILE=$(ls -t $NEXTCLOUD_CONF/*.tar.gz | head -n1)
 
-# Caso a pasta ./data esteja em outro local favor altere o caminho abaixo.
+# If the ./data folder is in another location, please change the path below.
 
 NEXTCLOUD_DATA="/var/snap/nextcloud/common/nextcloud/data"
 
-# Pasta de Configurações Emby (Jellyfin)
+# PLEX Settings
 
 PLEX_CONF="/var/lib/plexmediaserver/Library/Application Support/Plex Media Server"
 
-# Configurando isso, para que o repositório não precise ser fornecido na linha de comando:
+# Setting this, so that the repository does not need to be provided on the command line:
 export BORG_REPO="/path/to/folder/Repo"
 
-# Configurando isso, para que a senha não seja fornecido na linha de comando 
+# Setting this, so that the password is not provided on the command line 
 export BORG_PASSPHRASE='Senhasegura'
 
-# Data do Backup
+# Backup Date
 ARCHIVE_DATE=$1
 
-# Incluir pastas e arquivos especificos ao backup 
+# Include specific folders and files to backup 
 PATTERNS='/path/to/patterns.lst'
 
-# Arquivos de Log 
+# Log Files 
 LOGFILE_PATH='/var/log/backup-$(date +%Y-%m-%d_%H-%M).txt'
 RESTLOGFILE_PATH='/var/log/restore-$(date +%Y-%m-%d_%H-%M).txt'
